# rust-i18n-gen

./: Cargo.toml  README.md  rust-i18n-gen.code-workspace
example/: Cargo.toml
example/lang/: en.yaml  ja.yaml
example/src/: main.rs
examples/: i18n.rs
examples/lang/: ja.yaml
i18n/: Cargo.toml
i18n/src/: lib.rs  main.rs
rust-i18n-gen/: Cargo.toml
rust-i18n-gen/src/: lib.rs  template.rs
src/: lib.rs  parse.rs  result.rs
tests/: i18n.rs
